--- a/assets/styles/scss/_variables.scss
+++ b/assets/styles/scss/_variables.scss
@@ -2,7 +2,7 @@ $ff-serif: "Bellefair", serif;
 $ff-sans-cond: "Barlow Condensed", sans-serif;
 $ff-sans-normal: "Barlow", sans-serif;
 
-$gutter: 25px;
+$gutter: 24px;
 
 
 $fs-900: 9rem;
